--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
 </head>
 <body ng-app="compliments">
   <h1>Emergency Compliment</h1>
+  <div data-ng-controller='complimentsController as vm'>
+    {{vm.data}}
+</div>
 
 </body>
 </html>
