--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 </head>
 <body ng-app="compliments">
   <h1>Emergency Compliment</h1>
-
+  <div data-ng-controller ='complimentController as vm'>
+    {{vam.data}}
+  </div>
 </body>
 </html>
