--- a/index.html
+++ b/index.html
@@ -3,12 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <title>Emergency Compliment</title>
+  <link rel="stylesheet" type="text" href="style.css">
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.min.js"></script>
   <script src="app.js"></script>
   <script src="data.js"></script>
   <script src="js/compliments/compliments.controller.js"></script>
-
-  </script>
 </head>
 <body ng-app="compliments">
   <h1>Emergency Compliment</h1>
